# smarthome

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  usecases.py
.github/workflows/: ci.yml
smarthome/: auth.py  depends.py  logger.py  main.py  models.py  settings.py
smarthome/actions/: all_actions.py
smarthome/connectors/: broker.py  bus.py  database.py  ws.py
smarthome/cronos/: collect_nodes_states.py
smarthome/cruds/: __init__.py  nodes.py  sensor_history.py  tokens.py  users.py
smarthome/routers/browser/: front.py
smarthome/routers/browser/apis/: auth.py  nodes.py  users.py
smarthome/routers/browser/ws/: endpoints.py
smarthome/routers/nodes/apis/: equipment.py
smarthome/routers/nodes/ws/: endpoints.py
smarthome/routers/system/: healthcheck.py
smarthome/schemas/: __init__.py  base.py  healthcheck.py  nodes.py  tokens.py  users.py  ws.py
templates/: index-sio.html  index.html  login.html  node.html  node_sensor.html  nodes.html  test_node_ws.html  wrapper.html
tests/: conftest.py
tests/api/: test_chat.py  test_status.py  test_tokens.py  test_users.py
tests/unit/: test_users.py
